build: date in version name now follows ISO 8601
feat: `AnimalTameEvent` will be fired when trying to tame a dragon