@@ -17,7 +17,6 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 import static net.dragonmounts.neo.compat.platform.ServerNetworkHandler.sendTracking;
 
@@ -48,7 +47,7 @@ public class DebugPacketsMixin {
                         var target = path.getEndNode();
                         path.setDebug(temp, temp, target == null
                                 ? Collections.emptySet()
-                                : Set.of(new Target(target))
+                                : Collections.singleton(new Target(target))
                         );
                         return path;
                     }).orElse(null),
