@@ -9,13 +9,13 @@ import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 public class DMLootProvider extends LootTableProvider {
     public DMLootProvider(PackOutput output, CompletableFuture<HolderLookup.Provider> registries) {
-        super(output, Set.of(), List.of(
+        super(output, Collections.emptySet(), List.of(
                 new LootTableProvider.SubProviderEntry(DMBlockLootProvider::new, LootContextParamSets.BLOCK),
                 new LootTableProvider.SubProviderEntry(DMChestLootProvider::new, LootContextParamSets.CHEST),
                 new LootTableProvider.SubProviderEntry(DMEntityLootProvider::new, LootContextParamSets.ENTITY)
